src/test/deca/context/valid/created/objet/name_class_4.deca
// Description :
// test de verification nom de class
//
// Resultats :
// ok

class String {
    int x;
}
