src/test/deca/context/invalid/created/objet/class_null.deca
// Description :
//      test de verification du nom de classe 
// Resultats :
//      Ligne 6 : nom de classe invalide

class null {
  
}
